# xcursor-format

./: LICENSE  README.md  pyproject.toml  xcur2png.py  xcursor_format.py  xcursor_theme_leftifier.py
.github/workflows/: publish.yml
